Início seção serviços

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
            target="_blank">Fale Conosco <img src="/img/redes-sociais/whatsapp-svgrepo-com.png" alt="Fale conosco"> </a> </p>
     </div>
   </div>
+  <!-- FIM BANNER -->
+  <!-- INÍCIO SERVIÇOS -->
+    <div class="container">
+      <h3>Alguns dos nossos serviços</h3>
+      <div class="box-servicos">
+        <ul type="square">
+          <li>
+            <span class="destaque">Banho & Tosa</span>: Banho, hidratação
+            tosa higiênica, tosa de cachorros de diversas raças e outros 
+            serviços feitos por profissionais parceiros especialistas no assunto.
+          </li>
+        </ul>
+      </div>
+    </div>
+  <!-- FIM SERVIÇOS -->
 </body>
 </html>
 
