itens seção serviços

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             tosa higiênica, tosa de cachorros de diversas raças e outros 
             serviços feitos por profissionais parceiros especialistas no assunto.
           </li>
+          <li>
+            <span class="destaque">Veterinário 24h</span>  A saúde do seu melhor 
+            amigo em boas mãos, consultas, exames e vacinas com médicos-veterinários parceiros.
+          </li>
         </ul>
       </div>
     </div>
