finalizando seção serviços

--- a/index.html
+++ b/index.html
@@ -25,19 +25,36 @@
       <h3>Alguns dos nossos serviços</h3>
       <div class="box-servicos">
         <ul type="square">
-          <li>
-            <span class="destaque">Banho & Tosa</span>: Banho, hidratação
-            tosa higiênica, tosa de cachorros de diversas raças e outros 
-            serviços feitos por profissionais parceiros especialistas no assunto.
-          </li>
-          <li>
-            <span class="destaque">Veterinário 24h</span>  A saúde do seu melhor 
-            amigo em boas mãos, consultas, exames e vacinas com médicos-veterinários parceiros.
-          </li>
+            <li><span class="destaque">Veterinarios 24h</span>: Banho, hidratação, 
+              tosa higiênica, tosa de cachorros de diversas 
+              raças e outros serviços feitos por profissionais 
+              parceiros especialistas no assunto.
+            </li>
+            <li><span class="destaque">Dog Walker</span>: Banho, hidratação, 
+              tosa higiênica, tosa de cachorros de diversas 
+              raças e outros serviços feitos por profissionais 
+              parceiros especialistas no assunto.
+            </li>
+            <li><span class="destaque">Creche Pet</span>: Banho, hidratação, 
+              tosa higiênica, tosa de cachorros de diversas 
+              raças e outros serviços feitos por profissionais 
+              parceiros especialistas no assunto.
+            </li>
+            <li><span class="destaque">Produtos para seu pet</span>: Banho, hidratação, 
+              tosa higiênica, tosa de cachorros de diversas 
+              raças e outros serviços feitos por profissionais 
+              parceiros especialistas no assunto. </li>
         </ul>
       </div>
+      <!-- FIM SERVIÇOS -->
+      
+
+          </div>
+      </div>
+
+
     </div>
-  <!-- FIM SERVIÇOS -->
+  
 </body>
 </html>
 
