finalizando redes sociais

--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@
         </ul>
       </div>
       <!-- FIM SERVIÇOS -->
-      
-
+      <!-- INÍCIO FAIXA -->
+      <div class="container faixa">
+        <p class="text-faixa"> Aqui na <span class="destaque">Pet Boutique</span>
+          somos apaixonados pelo que fazemos</p>
+          <div class="redes-sociais">
+            <a href="https://www.facebook.com/" target="_blank">
+              <img src="/img/redes-sociais/facebook-svgrepo-com.png" alt="Facebook">
+            </a>
           </div>
-      </div>
-
+        </div>
+        <!-- FIM DA FAIXA -->
 
     </div>
   
