finalizando seção marcas

--- a/index.html
+++ b/index.html
@@ -55,10 +55,26 @@
             <a href="https://www.facebook.com/" target="_blank">
               <img src="/img/redes-sociais/facebook-svgrepo-com.png" alt="Facebook">
             </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="/img/redes-sociais/instagram-svgrepo-com.png" alt="Instagram">
+            </a>
+            <a href="https://wa.me/5562999999999/?text=Olá" target="_blank">
+              <img src="/img/redes-sociais/whatsapp-svgrepo-com.png" alt="Whatsapp">
+            </a>
           </div>
         </div>
-        <!-- FIM DA FAIXA -->
-
+         <!-- FIM DA FAIXA -->
+         <!-- INÍCIO MARCAS -->
+        <div class="container-marcas">
+            <h3>Nossas principais marcas</h3>
+            <div class="container-marcas">
+              <img src="/img/marcas/AlfaPet.png" alt="ALfa Pet" class="logo-marca">
+              <img src="/img/marcas/BichinhoChic.png" alt="BichinhoChic" class="logo-marca">
+              <img src="/img/marcas/Boehringer.png" alt="Boehringer" class="logo-marca">
+              <img src="/img/marcas/Inataa.png" alt="Inataa" class="logo-marca">
+            </div>
+        </div>
+        <!-- FIM MARCAS -->
     </div>
   
 </body>
