--- a/index.html
+++ b/index.html
@@ -73,8 +73,39 @@
               <img src="/img/marcas/Boehringer.png" alt="Boehringer" class="logo-marca">
               <img src="/img/marcas/Inataa.png" alt="Inataa" class="logo-marca">
             </div>
+            <div class="container-marcas">
+              <img src="/img/marcas/LogoBiofresh.png" alt="Bio Fresh" class="logo-marca">
+              <img src="/img/marcas/LogoBravecto.png" alt="Bravecto" class="logo-marca">
+              <img src="/img/marcas/NexgardSpectra.png" alt="Nexgard Spectra" class="logo-marca">
+              <img src="/img/marcas/Pickorruchos.png" alt="Pickorruchos" class="logo-marca">
+            </div>
+            <div class="container-marcas">
+              <img src="/img/marcas/PapaPets.png" alt="Papa Pets" class="logo-marca">
+              <img src="/img/marcas/royalcanini.png" alt="Royal Canini" class="logo-marca">
+              <img src="/img/marcas/saopet.png" alt="São Pet" class="logo-marca">
+              <img src="/img/marcas/exopets.png" alt="Exo Pets" class="logo-marca">
+            </div>
         </div>
         <!-- FIM MARCAS -->
+         
+        <!-- INÍCIO FAIXA -->
+         <div class="container faixa">
+          <p class="text-faixa">Na <span class="destaque">Pet Boutique</span>
+            você encontra Estilo e Elegância para Cães e Gatos
+          </p>
+          <div class="redes-sociais">
+            <a href="https://www.facebook.com/" target="_blank">
+              <img src="/img/redes-sociais/facebook-svgrepo-com.png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="/img/redes-sociais/instagram-svgrepo-com.png" alt="Instagram">
+            </a>
+            <a href="https://wa.me/556299999999999/?text=Olá" target="_blank">
+              <img src="/img/redes-sociais/facebook-svgrepo-com.png" alt="Whatsapp">
+            </a>
+          </div>
+         </div>
+         <!-- FIM FAIXA -->
     </div>
   
 </body>
