seção onde estamos finalizada

--- a/index.html
+++ b/index.html
@@ -101,13 +101,20 @@
               <img src="/img/redes-sociais/instagram-svgrepo-com.png" alt="Instagram">
             </a>
             <a href="https://wa.me/556299999999999/?text=Olá" target="_blank">
-              <img src="/img/redes-sociais/facebook-svgrepo-com.png" alt="Whatsapp">
+              <img src="/img/redes-sociais/whatsapp-svgrepo-com.png" alt="Whatsapp">
             </a>
           </div>
          </div>
          <!-- FIM FAIXA -->
-    </div>
-  
+    
+  <!-- INÍCIO ONDE ESTAMOS -->
+   <div class="container onde-estamos">
+      <h3>Onde estamos</h3>
+      <p>Se ficou interessado em nossos serviços, venha nos conhecer</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d122524.86242106624!2d-49.047469187556636!3d-16.327953413369666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x935ea380f53342e7%3A0xf51fa5eca5469200!2sAv.%20Goi%C3%A1s%2C%201775%20-%20St.%20Central%2C%20An%C3%A1polis%20-%20GO%2C%2075020-100!3m2!1d-16.3279694!2d-48.965067399999995!5e0!3m2!1spt-BR!2sbr!4v1725881749670!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   </div>
+   <!-- FIM ONDE ESTAMOS -->
+    
 </body>
 </html>
 
